final change in contact page

--- a/ForAnimalsWithLove/Views/Home/Contact.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Contact.cshtml
@@ -43,12 +43,12 @@
                 <!-- contact-info-->
                 <div class="col-lg-5">
                     <!-- map-->
-                    <div id="map-canvas" class="mt-5" data-aos="fade-down">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d366.72429474930465!2d23.30023060789033!3d42.66571301249178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84ee2c455555%3A0xc202cbb0ea28f49a!2sVAS-VET!5e0!3m2!1sbg!2sbg!4v1690490422807!5m2!1sbg!2sbg" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="mt-6" data-aos="fade-down">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429.85893561811423!2d23.299879484707596!3d42.66569032289447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84ee2c455555%3A0xc202cbb0ea28f49a!2sVAS-VET!5e0!3m2!1sbg!2sbg!4v1691694978042!5m2!1sbg!2sbg" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 <!-- /contact-info-->
-                <div class="col-lg-4 offset-lg-3 h-40 card bg-secondary res-margin ">
+                <div class="col-lg-4 offset-lg-3 h-50 card bg-secondary res-margin">
                     <div class="contact-info text-light">
                         <!-- contact-info-->
                         <div class="text-light text-sm-start">
