--- a/ForAnimalsWithLove/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ForAnimalsWithLove/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using ForAnimalsWithLove.ViewModels.Owners;
+@model RegistrationOwnerViewModel
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -25,7 +27,7 @@
 					<h3>Може да се регистрирате тук, ако сте наш клиент</h3>
 				</div>
 				<div class="card-body">
-					<form>
+					<form asp-action="Register" method="get">
 						<div class="input-group form-group">
 							<div class="input-group-prepend">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -49,8 +51,8 @@
 							<div class="input-group-prepend">
 								<span class="input-group-text"><i class="fas fa-phone"></i></span>
 							</div>
-							@*<input type="number" class="form-control" placeholder="тел.номер, който сте ни предоставили">*@
-							<asp:TextBox type="text" class="form-control" runat="server" id="phonenumber" placeholder="тел.номер, който сте ни предоставили"></asp:TextBox>
+							<input type="password" class="form-control" placeholder="тел.номер, който сте ни предоставили" asp-for="@Model.PhoneNumber" class="form-control" aria-required="true" />
+							<span asp-validation-for="@Model.PhoneNumber" class="text-danger"></span>
 						</div>
 						<div class="form-group">
 							<input type="submit" value="Регистрирай ме!" class="btn float-right login_btn">
@@ -64,5 +66,5 @@
 </html>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial"/>
 }
