--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,111 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using ForAnimalsWithLove.Data.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
+
+	@if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
-    </li>
-    <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Вход</a>
-    </li>
-}
-</ul>
+		<div class="container col-md-5">
+			<ul class="navbar-nav">
+				<!-- menu item -->
+				<li class="nav-item">
+					<a class="nav-link" asp-controller="Administrator" asp-action="All">
+						Всички клиенти
+					</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link" aria-haspopup="true" aria-expanded="false">
+						Лекари
+					</a>
+				</li>
+				<!-- menu item -->
+				<li class="nav-item dropdown">
+					<a class="nav-link" aria-haspopup="true" aria-expanded="false">
+						Треньори
+					</a>
+				</li>
+			</ul>
+		</div>
+
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+			</li>
+			<li class="nav-item">
+				<form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+					<button type="submit" class="nav-link btn btn-link text-dark">Изход</button>
+				</form>
+			</li>
+		</ul>
+	}
+	else
+	{
+		<div class="container">
+			<!-- logo -->
+			<a class="navbar-brand" asp-controller="Home" asp-action="Index">
+				<img src="~/images/logo.png" style="block-size: 80px" alt="ForAnimalsWithLove">
+			</a>
+			<!-- Navbartoggler -->
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggle-icon">
+					<i class="fas fa-bars"></i>
+				</span>
+			</button>
+			<!-- /Navbar toggler -->
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ms-2">
+					<!-- menu item -->
+					<li class="nav-item">
+						<a class="nav-link" asp-controller="Home" asp-action="About">
+							За нас
+						</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Нашият екип
+						</a>
+						<div class="dropdown-menu" aria-labelledby="services-dropdown">
+							<a class="dropdown-item" asp-controller="Home" asp-action="TeamVet">Ветеринари</a>
+							<a class="dropdown-item" asp-controller="Home" asp-action="TeamTrainer">Треньори</a>
+						</div>
+					</li>
+					<!-- menu item -->
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Нашите услуги
+						</a>
+						<div class="dropdown-menu" aria-labelledby="services-dropdown">
+							<a class="dropdown-item" asp-controller="Home" asp-action="Halls">Отделения</a>
+							<a class="dropdown-item" asp-controller="Home" asp-action="Education">Обучение</a>
+							<a class="dropdown-item" asp-controller="Home" asp-action="Hotels">Хотелско настаняване</a>
+							<a class="dropdown-item" asp-controller="Home" asp-action="Grooming">Grooming</a>
+						</div>
+					</li>
+					<!-- menu item -->
+					<li class="nav-item">
+						<a class="nav-link" id="about-dropdown" asp-controller="Home" asp-action="Aboption" aria-haspopup="true" aria-expanded="false">
+							Осинови
+						</a>
+					</li>
+					<!-- menu item -->
+					<li class="nav-item">
+						<a class="nav-link" id="contact-dropdown" asp-controller="Home" asp-action="Contact" aria-haspopup="true" aria-expanded="false">
+							Контакти
+						</a>
+					</li>
+				</ul>
+
+			</div>
+			<ul class="navbar-nav ms-2">
+			<li class="nav-item">
+				<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Вход</a>
+			</li>
+			</ul>
+		</div>
+		
+	
+	}
