implement Admin pages for doctors and trainers

--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -10,18 +10,18 @@
 			<ul class="navbar-nav">
 				<!-- menu item -->
 				<li class="nav-item">
-					<a class="nav-link" asp-controller="Administrator" asp-action="All">
+					<a class="nav-link" asp-controller="Administrator" asp-action="AllAnimals">
 						Всички клиенти
 					</a>
 				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link" aria-haspopup="true" aria-expanded="false">
+				<li class="nav-item">
+				<a class="nav-link" asp-controller="Administrator" asp-action="AllDoctors" aria-haspopup="true" aria-expanded="false">
 						Лекари
 					</a>
 				</li>
 				<!-- menu item -->
-				<li class="nav-item dropdown">
-					<a class="nav-link" aria-haspopup="true" aria-expanded="false">
+				<li class="nav-item">
+				<a class="nav-link" asp-controller="Administrator" asp-action="AllTrainers" aria-haspopup="true" aria-expanded="false">
 						Треньори
 					</a>
 				</li>
