implement add butons in Admin Page

--- a/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
@@ -56,6 +56,11 @@
                 <div class="section-heading" data-aos="zoom-in">
                     <h3>Всички клиенти</h3>
                 </div>
+                <div>
+                    <div class="text-center col-md-10 col-xl-12">
+                        <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary"> + Добави клиент</a>
+                    </div>
+                </div>
                
                 <div class="row mt-5">
                     <!-- Pet  -->
@@ -100,6 +105,7 @@
             </div>
             <!-- /container -->
         </div>
+    </div>
         <!-- /page -->
         <!-- Bootstrap core & Jquery -->
         <script src="~/vendor/jquery/jquery.min.js"></script>
