--- a/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
@@ -55,6 +55,11 @@
                 <div class="section-heading" data-aos="zoom-in">
                     <h3>Всички ветеринари</h3>
                 </div>
+                <div>
+                    <div class="text-center col-md-10 col-xl-12">
+                        <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary"> + Добави ветеринар</a>
+                    </div>
+                </div>
 
                 <div class="row mt-4">
                     <!-- Pet  -->
@@ -95,6 +100,7 @@
             </div>
             <!-- /container -->
         </div>
+    </div>
         <!-- /page -->
         <!-- Bootstrap core & Jquery -->
         <script src="~/vendor/jquery/jquery.min.js"></script>
