start implement details, edit, delete methods

--- a/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
@@ -90,7 +90,7 @@
                                         </ul>
                                         <!-- Buttons -->
                                         <div class="text-center">
-                                            <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary">Детайли</a>
+                                            <a class="btn btn-primary" asp-controller="Administrator" asp-action="AnimalDetails">Детайли</a>
                                         </div>
                                     </div>
                                 </div>
