--- a/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
@@ -85,7 +85,7 @@
                                             <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary">Промени</a>
                                         </div>
                                         <div class="text-center">
-                                            <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary">Детайли</a>
+                                            <a asp-controller="Administrator" asp-action="DoctorDetails" class="btn btn-primary">Детайли</a>
                                         </div>
                                     </div>
                                 </div>
