--- a/ForAnimalsWithLove/Views/Shared/_AddOwnerFormPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_AddOwnerFormPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ForAnimalsWithLove.ViewModels.Admins;
 @model AdminOwnerModel
 
-<h5 class="text-secondary-emphasis">Данни на животното:</h5>
+<h5 class="text-secondary-emphasis">Данни на собственика:</h5>
 <div class="row">
 	<div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
 		<form method="post">
@@ -33,10 +33,6 @@
 				<span asp-validation-for="Address" class="small textdanger"></span>
 			</div>
 			
-
-			@*<div class="text-center">
-			<input class="btn btn-primary mt-3" type="submit" value="Запази" />
-			</div>*@
 		</form>
 	</div>
 </div>
