--- a/ForAnimalsWithLove/Views/Shared/_AddOwnerFormPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_AddOwnerFormPartial.cshtml
@@ -5,6 +5,7 @@
 <div class="row">
 	<div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
 		<form method="post">
+
 			<div class="form-group">
 				<label asp-for="FirstName"></label>
 				<input asp-for="FirstName" class="form-control" placeholder="Име...">
@@ -12,24 +13,24 @@
 			</div>
 			<div class="form-group">
 				<label asp-for="MiddleName"></label>
-				<input asp-for="MiddleName" class="form-control" placeholder="Име...">
+				<input asp-for="MiddleName" class="form-control" placeholder="Презиме...">
 				<span asp-validation-for="MiddleName" class="small text-danger"></span>
 			</div>
 			<div class="form-group">
 				<label asp-for="LastName"></label>
-				<input asp-for="LastName" class="form-control" placeholder="Име...">
+				<input asp-for="LastName" class="form-control" placeholder="Фамилия...">
 				<span asp-validation-for="LastName" class="small text-danger"></span>
 			</div>
 			<div class="form-group">
 				<label asp-for="PhoneNumber"></label>
 				<input asp-for="PhoneNumber" class="form-control"
-					   placeholder="Възраст...">
+					   placeholder="Телефонен номер...">
 				<span asp-validation-for="PhoneNumber" class="small text-danger"></span>
 			</div>
 			<div class="form-group">
 				<label asp-for="Address"></label>
 				<input asp-for="Address" class="form-control"
-					   placeholder="Вид...">
+					   placeholder="гр.,ж.к., ул./бл.,ет.,ап....">
 				<span asp-validation-for="Address" class="small textdanger"></span>
 			</div>
 			
