--- a/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
@@ -57,7 +57,7 @@
                 </div>
                 <div>
                     <div class="text-center col-md-10 col-xl-12">
-                        <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary"> + Добави ветеринар</a>
+                        <a asp-controller="Administrator" asp-action="AddDoctor" class="btn btn-primary"> + Добави ветеринар</a>
                     </div>
                 </div>
 
