impelment details and edit information for doctors

--- a/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
@@ -79,13 +79,13 @@
                                         </ul>
                                         <!-- Buttons -->
                                         <div class="text-center">
-                                            <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary">Премахни</a>
+                                            <a asp-controller="Administrator" asp-action="RemoveDoctor" asp-route-id="@doctor.Id" class="btn btn-primary">Премахни</a>
                                         </div>
                                         <div class="text-center">
-                                            <a asp-controller="Administrator" asp-action="Details" class="btn btn-primary">Промени</a>
+                                            <a asp-controller="Administrator" asp-action="EditDoctor" asp-route-id="@doctor.Id" class="btn btn-primary">Промени</a>
                                         </div>
                                         <div class="text-center">
-                                            <a asp-controller="Administrator" asp-action="DoctorDetails" class="btn btn-primary">Детайли</a>
+                                            <a asp-controller="Administrator" asp-action="DoctorDetails" asp-route-id="@doctor.Id" class="btn btn-primary">Детайли</a>
                                         </div>
                                     </div>
                                 </div>
