complete trainers methods

--- a/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllDoctors.cshtml
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="row mt-4">
-                    <!-- Pet  -->
+                    <!-- Doctor  -->
                     @foreach (var doctor in allDoctors)
                     {
                         <div class="adopt-card col-md-2 col-xl-6 res-margin">
@@ -73,7 +73,7 @@
                                     <!-- Name -->
                                     <div class="caption-adoption">
                                         <h6 class="adoption-header">@doctor.FirstName @doctor.LastName</h6>
-                                        <!-- List -->
+                                   
                                         <ul class="list-unstyled">
                                             <li><strong>Телефонен номер:</strong> @doctor.PhoneNumber</li>
                                         </ul>
@@ -101,16 +101,18 @@
             <!-- /container -->
         </div>
     </div>
-        <!-- /page -->
-        <!-- Bootstrap core & Jquery -->
-        <script src="~/vendor/jquery/jquery.min.js"></script>
-        <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <!-- Custom Js -->
-        <script src="~/js/custom.js"></script>
-        <script src="~/js/plugins.js"></script>
-        <!-- Prefix free -->
-        <script src="~/js/prefixfree.min.js"></script>
+       
 </body>
+
+
+<!-- /page -->
+<!-- Bootstrap core & Jquery -->
+<script src="~/vendor/jquery/jquery.min.js"></script>
+<script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Custom Js -->
+<script src="~/js/custom.js"></script>
+<script src="~/js/plugins.js"></script>
+<!-- Prefix free -->
+<script src="~/js/prefixfree.min.js"></script>
+
 </html>
-
-
