--- a/ForAnimalsWithLove/Views/Administrator/AllTrainers.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllTrainers.cshtml
@@ -63,7 +63,7 @@
 
 
                 <div class="row mt-4">
-                    <!-- Pet  -->
+                    <!-- Trainer  -->
                     @foreach (var trainer in allTrainers)
                     {
                         <div class="adopt-card col-md-2 col-xl-6 res-margin">
@@ -74,7 +74,7 @@
                                     <!-- Name -->
                                     <div class="caption-adoption">
                                         <h6 class="adoption-header">@trainer.FirstName @trainer.LastName</h6>
-                                        <!-- List -->
+                                     
                                         <ul class="list-unstyled">
                                             <li><strong>Телефонен номер:</strong> @trainer.PhoneNumber</li>
                                         </ul>
