--- a/ForAnimalsWithLove/Views/Administrator/DoctorDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/DoctorDetails.cshtml
@@ -39,9 +39,9 @@
 			</div>
 			<div class="card col-8 border-0">
 				<p style="font-size:25px;"><u>@Model.FirstName @Model.LastName</u></p>
-				<p>Телефон за контакт: <b>@Model.PhoneNumber</b></p>
-				<p>Адрес: <b>@Model.Address</b></p>
-				<p>Специализации / специалности: <b>@Model.Specialization</b></p>
+				<p><b>Телефон за контакт:</b> @Model.PhoneNumber</p>
+				<p><b>Адрес:</b> @Model.Address </p>
+				<p><b>Специализации / специалности:</b> @Model.Specialization</p>
 			</div>
 		</div>
 	</div>
