--- a/ForAnimalsWithLove/Views/Administrator/EditTrainer.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/EditTrainer.cshtml
@@ -2,7 +2,7 @@
 @model AdminTrainerModel
 
 @{
-	ViewBag.Title = "Добави треньор";
+	ViewBag.Title = "Промени информация";
 }
 <head>
 	<!-- Bootstrap core CSS -->
@@ -38,7 +38,7 @@
 			<div class="form-group">
 				<label asp-for="PhoneNumber"></label>
 				<input asp-for="PhoneNumber" class="form-control"
-					   placeholder="Телефонен номер...">
+		placeholder="Телефонен номер...">
 				<span asp-validation-for="PhoneNumber" class="small text-danger"></span>
 			</div>
 			<div class="form-group">
@@ -48,7 +48,7 @@
 			</div>
 
 			<div class="text-center">
-				<button class="btn btn-primary mt-3" type="submit" asp-controller="Administrator" asp-action="AddTrainer">Запази</button>
+				<button class="btn btn-primary mt-3" type="submit" asp-controller="Administrator" asp-action="EditTrainer">Запази</button>
 			</div>
 		</form>
 	</div>
