--- a/ForAnimalsWithLove/Views/Shared/_AddOwnerFormPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_AddOwnerFormPartial.cshtml
@@ -1,11 +1,10 @@
 ﻿@using ForAnimalsWithLove.ViewModels.Admins;
 @model AdminOwnerModel
 
-<h5 class="text-secondary-emphasis">Данни на собственика:</h5>
+<h5 class="text-secondary-emphasis">Данни за собственика:</h5>
 <div class="row">
 	<div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-		<form method="post">
-
+		
 			<div class="form-group">
 				<label asp-for="FirstName"></label>
 				<input asp-for="FirstName" class="form-control" placeholder="Име...">
@@ -34,6 +33,5 @@
 				<span asp-validation-for="Address" class="small textdanger"></span>
 			</div>
 			
-		</form>
 	</div>
 </div>
