start implement adding animal

--- a/ForAnimalsWithLove/Views/Administrator/AddAnimals.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AddAnimals.cshtml
@@ -29,7 +29,7 @@
 	<partial name="_AddGroomingFormPartial" />
 
 	<div class="text-center">
-		<input class="btn btn-primary mt-3" type="submit" value="Запази" />
+		<input class="btn btn-primary mt-3" type="submit" asp-controller="Administrator" asp-action="AddAnimal" value="Запази" />
 	</div>
 </form>
 
