--- a/ForAnimalsWithLove/Views/Shared/_AddHealthFormPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_AddHealthFormPartial.cshtml
@@ -7,9 +7,9 @@
 		<div class="form-group">
 			<label asp-for="Microchip"></label>
 			<br>
-			<input type="checkbox" asp-for="Microchip" name="microchip" value="T" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="Microchip" name="microchip" value="true" onclick="checkedOnClick(this)" />
 			<label> Да</label>
-			<input type="checkbox" asp-for="Microchip" name="microchip" value="F" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="Microchip" name="microchip" value="false" onclick="checkedOnClick(this)" />
 			<label> Не</label><br>
 			<span asp-validation-for="Microchip" class="small textdanger"></span>
 			<!-- Script -->
@@ -37,9 +37,9 @@
 		<div class="form-group">
 			<label asp-for="FirstVaccine"></label>
 			<br>
-			<input type="checkbox" asp-for="FirstVaccine" name="FirstVaccine" value="T" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="FirstVaccine" name="FirstVaccine" value="true" onclick="checkedOnClick(this)" />
 			<label> Да</label>
-			<input type="checkbox" asp-for="FirstVaccine" name="FirstVaccine" value="F" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="FirstVaccine" name="FirstVaccine" value="false" onclick="checkedOnClick(this)" />
 			<label> Не</label><br>
 			<span asp-validation-for="FirstVaccine" class="small textdanger"></span>
 			<!-- Script -->
@@ -61,9 +61,9 @@
 		<div class="form-group">
 			<label asp-for="SecondVaccine"></label>
 			<br>
-			<input type="checkbox" asp-for="SecondVaccine" name="SecondVaccine" value="T" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="SecondVaccine" name="SecondVaccine" value="true" onclick="checkedOnClick(this)" />
 			<label> Да</label>
-			<input type="checkbox" asp-for="SecondVaccine" name="SecondVaccine" value="F" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="SecondVaccine" name="SecondVaccine" value="false" onclick="checkedOnClick(this)" />
 			<label> Не</label><br>
 			<span asp-validation-for="SecondVaccine" class="small textdanger"></span>
 			<!-- Script -->
@@ -85,9 +85,9 @@
 		<div class="form-group">
 			<label asp-for="ThirdVaccine"></label>
 			<br>
-			<input type="checkbox" asp-for="ThirdVaccine" name="ThirdVaccine" value="T" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="ThirdVaccine" name="ThirdVaccine" value="true" onclick="checkedOnClick(this)" />
 			<label> Да</label>
-			<input type="checkbox" asp-for="ThirdVaccine" name="ThirdVaccine" value="F" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="ThirdVaccine" name="ThirdVaccine" value="false" onclick="checkedOnClick(this)" />
 			<label> Не</label><br>
 			<span asp-validation-for="ThirdVaccine" class="small textdanger"></span>
 			<!-- Script -->
@@ -109,9 +109,9 @@
 		<div class="form-group">
 			<label asp-for="AnnualVaccine"></label>
 			<br>
-			<input type="checkbox" asp-for="AnnualVaccine" name="AnnualVaccine" value="T" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="AnnualVaccine" name="AnnualVaccine" value="true" onclick="checkedOnClick(this)" />
 			<label> Да</label>
-			<input type="checkbox" asp-for="AnnualVaccine" name="AnnualVaccine" value="F" onclick="checkedOnClick(this)" />
+			<input type="checkbox" asp-for="AnnualVaccine" name="AnnualVaccine" value="false" onclick="checkedOnClick(this)" />
 			<label> Не</label><br>
 			<span asp-validation-for="AnnualVaccine" class="small textdanger"></span>
 			<!-- Script -->
