implement edit animal

--- a/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
@@ -90,7 +90,7 @@
                                         </ul>
                                         <!-- Buttons -->
                                         <div class="text-center">
-                                            <a class="btn btn-primary" asp-controller="Administrator" asp-action="EditAnimal" asp-route-id="@animal.Id">Промени</a>
+                                            <a class="btn btn-primary" asp-controller="Administrator" asp-action="EditAnimal" asp-route-id="@animal.Id">Промени/Добави</a>
                                         </div>
                                         <div class="text-center">
                                             <a class="btn btn-primary" asp-controller="Administrator" asp-action="AnimalDetails" asp-route-id="@animal.Id">Детайли</a>
