--- a/ForAnimalsWithLove/Views/Administrator/EditAnimal.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/EditAnimal.cshtml
@@ -90,24 +90,11 @@
 				</script>
 
 			<div class="text-center">
-				<button class="btn btn-primary mt-3" type="submit" value="EditDoctor">Запази</button>
+					<button class="btn btn-primary mt-3" type="submit" value="EditAnimal">Запази</button>
 			</div>
 
 		</form>
 
-
-		<div class="text-center col-md-10 col-xl-12">
-			<a asp-controller="Administrator" asp-action="AddHealthRecord" class="btn btn-primary"> + Добави здравно досие</a>
-		</div>
-		<div class="text-center col-md-10 col-xl-12">
-			<a asp-controller="Administrator" asp-action="AddGrooming" class="btn btn-primary"> + Добави Grooming услуги</a>
-		</div>
-		<div class="text-center col-md-10 col-xl-12">
-			<a asp-controller="Administrator" asp-action="AddEducation" class="btn btn-primary"> + Добави обучение</a>
-		</div>
-		<div class="text-center col-md-10 col-xl-12">
-			<a asp-controller="Administrator" asp-action="AddBooking" class="btn btn-primary"> + Добави хотелско настаняване</a>
-		</div>
 	</div>
 </div>
 
